0.24
  - support full-qualified table name.
0.23
  - DBIx::Custom::Mapper::map method support
    {value => '%<value>%'} syntax
0.22
  - added EXPERIMENTAL DBIx::Custom::Result::kv method
  - added EXPERIMENTAL DBIx::Custom::Result::flat method
  - added where => {name => [val1, val2, val3]} support
    this is expaned to "where name in (val1, val2, val3)"
0.2111
  - "created_at" option is renamed to "ctime" option.
    "created_at" is DEPRECATED!
  - "updated_at" option is renamed to "mtime" option.
    "updated_at" is DEPRECATED!
0.2110
  - Perl 5.008007 is required.
  - added EXPERIMETNAL aysnc_conf attribute
0.2109
  - select method can be called even if table name is not specified
0.2108
  - added async database access support using AnyEvent
    and added "async" option to execute method(EXPERIMENTAL)
  - EXPERIMETNAL "statement" option is replcaed "select" option
0.2107
  - removed EXPERIMENTAL status from the following methods and functinalities.
      DBIx::Custom::Result::value method
      DBIx::Custom::Result::column method
      DBIx::Custom::insert method "bulk_insert" option
      DBIx::Custom::insert method "multiplue insert functinality"
      DBIx::Custom::select method "first argument is received as column option"
      DBIx::Custom::Model::created_at attribute
      DBIx::Custom::Model::updated_at attribute
  - added EXPERIMENTAL DBIx::Custom::execute method "prepare_attr" option
  - added EXPERIMETNAL DBIx::Custom::execute method "statement" option
0.2106
  - renamed DBIx::Custom::Result::fetch_hash_first to fethc_hash_one
    because first is misleading name. fethc_hash_first is DEPRECATED!
  - renamed DBIx::Custom::Result::fetch_first to fetch_one,
    because first is misleading name. fetch_first is DEPRECATED!
0.2105
  - added EXPERIMENTAL DBIx::Custom::Result::value method
  - added EXPERIMENTAL DBIx::Custom::Result::column method
0.2104
  - improved bulk_insert performance
0.2103
  - added EXPERIMENTAL insert bulk_insert option.
0.2102